[package]
name = "pathtracer"
version = "0.1.0"
authors = ["Stefan Kerkmann <no@reply.de>"]
edition = "2018"

[lib]
bench = false
path = "src/lib/lib.rs"

[dependencies]
rand = "0.6.4"
lazy_static = "1.3.0"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false