[package]
name = "pathtracer"
version = "0.1.0"
authors = ["Stefan Kerkmann <no@reply.de>"]
edition = "2018"

[dependencies]
rand = "0.6.4"
lazy_static = "1.3.0"
rayon = "1.0.3"

[profile.release]
debug = true
codegen-units = 1
opt-level = 3

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false